--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,6 +1,24 @@
+.CuerpoLogin {
+    background-image: url("../components/images/FondoClaro.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.fondoClaroLogin {
+    width: 60%;
+    height: 500px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: white;
+    opacity: 0.7;
+    margin-top: -41px;
+}
+
 .Log{
     width: 26%;
-    background: linear-gradient(-45deg, rgb(183, 63, 238), rgb(255, 117, 140), rgb(252, 244, 200), rgb(255, 235, 153), rgb(246, 68, 68));
+    background: linear-gradient(-45deg, rgb(238, 130, 63), rgb(255, 117, 140), rgb(252, 244, 200), rgb(255, 235, 153), rgb(246, 124, 68));
     background-size: 400% 400%;
     position: relative;
     animation: EfectoLogin 10s ease infinite;
@@ -8,6 +26,7 @@
     justify-content: center;
     left: 47.3%;
     margin-top: 3.3%;
+    z-index: 3;
 }
 
 .Log h1{
@@ -20,26 +39,38 @@
     background-color: rgb(225, 117, 135);
     border-color: rgb(174, 89, 103);
     display: block;
+    
     margin: 0 auto;
     width: 60%;
-    
+}
+
+.botonRegistroLogin{
+    text-decoration: none;
+    display: flex;
+}
+
+.botonRegistroLogin button{
+    background-color: darkgoldenrod;
 }
 
 .Log label{
     color: rgb(208, 95, 114);
 }
 
+.contenedorImagenLogin {
+    height: 212px;
+}
+
 .Plantas img{
     width: 100%;
     height: 90%;
-    z-index: -1;
+    z-index: 2;
     position: absolute;
     top: 15%;
 }
 
 .Burbuja img{
     width: 5%;
-    z-index: -1;
     position: absolute;
     top: 35%;
     left: 40%;
@@ -47,7 +78,7 @@
 
 .MujerSentada img{
     width: 28%;
-    z-index: -2;
+    z-index: 1;
     position: absolute;
     top: 55%;
     left: 18%;
