--- a/src/css/MenuBarTienda.css
+++ b/src/css/MenuBarTienda.css
@@ -2,67 +2,24 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background: linear-gradient(rgb(32, 152, 237), rgb(204, 13, 204));
+    background: white;
 }
 
-.puntosTienda{
-    font-size: 60px;
-    color: rgb(218, 137, 7);
-    
+.logoTienda img{
+    margin-left: 100px;
+} 
+
+.principalTienda a{
+    text-decoration: none;
+    font-size: 20px;
+    color: palevioletred;
 }
 
-.casaTienda a{
-    font-size: 60px;
-    color: rgb(218, 137, 7);
+.perfilMenuTienda a{
+    font-size: 50px;
 }
 
-.buscarTienda{
-    position: relative;
-    padding: 5px;
-    height: 40px;
-}
-
-.buscarTienda input{
-    height: 35px;
-    width: 0px;
-    padding: 0 15px;
-    outline: none;
-    border: 1px solid silver;
-    border-radius: 25px;
-    transition: all 0.6s ease;
-    text-align: center;
-    outline: none;
-}
-
-.LupaTienda{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    background: #4b055a;
-    text-align: center;
-    color: white;
-    border-radius: 50%;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-.buscarTienda:hover input{
-    width: 200px;
-}
-
-.buscarTienda input:focus{
-    width: 200px;
-}
-
-.perfilTienda a{
-    font-size: 60px;
-    color: rgb(218, 137, 7);
-}
-
-.bolsoTienda a{
-    font-size: 60px;
-    color: rgb(218, 137, 7);
+.carritoTienda a{
+    font-size: 50px;
+    margin-right: 100px;
 }
